fix mobile alignment

--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -108,9 +108,12 @@ hr {
         align-items: center;
     }
 
-    .job {
+    .job, .education {
         flex-direction: column; /* Stack sections vertically on small screens */
     }
+
+
+
 }
 
 /*
